tests/errors/variables/007.err
[1m[0;31merror: [0mredeclaration of variable 'a'
  [1m[34m-->[0m tests/errors/variables/007.ura:5:5
  [1m[34m|[0m
[1m[34m5 |[0m     a int = 2
  [1m[34m|[0m     [1;31m^[0m
